# parallelism

./: README.md
first/: CMakeLists.txt
first/src/: lab2.1.cpp
lab5/: lab5.py
laba2/first/: CMakeLists.txt
laba2/first/src/: lab2.1.cpp
laba2/second/: CMakeLists.txt
laba2/third/src/var1/: lab2.3.cpp
laba2/third/src/var2/: lab2.3.cpp
laba3/first/: CMakeLists.txt
laba3/first/src/: lab3.1.cpp
laba3/second/: CMakeLists.txt
laba3/second/src/: main.cpp  test.cpp
second/: CMakeLists.txt
second/src/: lab2.2.cpp
third/: CMakeLists.txt
third/src/var1/: lab2.3.cpp
third/src/var2/: lab2.3.cpp
with_cmake/: CMakeLists.txt
with_make/: Makefile  laba1.cpp  sin_sum
